# libArachne

./: CMakeLists.txt  CPackConfig.cmake  README.md
src/: CenterDeviationBeadingStrategy.h  SkeletalTrapezoidation.cpp  Statistics.cpp  Statistics.h  VoronoiQuadrangulation.cpp  main.cpp  pathOrderOptimizer.cpp  pathOrderOptimizer.h  timeEstimate.cpp  timeEstimate.h
src/Arachne/: BoostInterface.hpp  ExtrusionLineConnector.cpp  ExtrusionLineConnector.h  SkeletalTrapezoidation.cpp  SkeletalTrapezoidation.h  SkeletalTrapezoidationEdge.cpp  SkeletalTrapezoidationEdge.h  SkeletalTrapezoidationJoint.h  SkeletalTrapezoidationNode.cpp  SkeletalTrapezoidationNode.h  TrapezoidationQuantizer.cpp  TrapezoidationQuantizer.h  VariableWidthInsetGenerator.cpp  VariableWidthInsetGenerator.h
src/Arachne/BeadingStrategies/: BeadingStrategy.cpp  BeadingStrategy.h  BeadingStrategyHelper.cpp  BeadingStrategyHelper.h  CenterDeviationBeadingStrategy.cpp  CenterDeviationBeadingStrategy.h  ConstantBeadingStrategy.cpp  ConstantBeadingStrategy.h  DistributedBeadingStrategy.cpp  DistributedBeadingStrategy.h  InwardDistributedBeadingStrategy.h  LimitedBeadingStrategy.cpp  LimitedBeadingStrategy.h  LimitedDistributedBeadingStrategy.cpp  LimitedDistributedBeadingStrategy.h  NaiveBeadingStrategy.cpp  NaiveBeadingStrategy.h  OutlineAccuracyBeadingStrategy.cpp  OutlineAccuracyBeadingStrategy.h  SingleBeadBeadingStrategy.cpp  SingleBeadBeadingStrategy.h  WideningBeadingStrategy.cpp  WideningBeadingStrategy.h
src/TestGeometry/: Microstructure.h
src/settings/: EnumSettings.h
src/settings/types/: AngleDegrees.h  Duration.h  LayerIndex.h  Ratio.h
src/utils/: AABB.cpp  AABB.h  AABB3D.cpp  AABB3D.h  Coord_t.h  HalfEdge.h  HalfEdgeGraph.h  HalfEdgeNode.h  IntPoint.h  LinearAlg2D.cpp  ListPolyIt.cpp  ListPolyIt.h  Point3.cpp  Point3.h  PolygonsPointIndex.cpp  PolygonsPointIndex.h  SVG.cpp  SVG.h  SparseGrid.h  SparseLineGrid.h  SparsePointGrid.h  SparsePointGridInclusive.h  SymmetricPair.h  UnionFind.h  floatpoint.h  gettime.cpp  gettime.h  linearAlg2D.h  logoutput.cpp  logoutput.h  math.h  polygon.cpp  polygon.h  polygonUtils.cpp  polygonUtils.h
src/utils/types/: AngleRadians.h  Duration.h  Temperature.h  Velocity.h
